<resources>
    <string name="app_name">Planner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="taskname">taskname</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="location">location</string>
    <string name="add_task">Add Task</string>
</resources>
