<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/addTaskNo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:ems="10"
        android:hint="person3"
        android:inputType="text" />

    <EditText
        android:id="@+id/addTaskNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:ems="10"
        android:hint="person2"
        android:inputType="text" />

    <EditText
        android:id="@+id/addTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/taskname"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/addTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/checkBox"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/addTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/addTaskDate"
        android:layout_marginTop="154dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/addTaskLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/addTaskNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="person1"
        android:inputType="text" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addTaskNo3"
        android:layout_alignParentBottom="true"
        android:onClick="addTaskNow"
        android:text="@string/add_task"
        android:layout_alignRight="@+id/addTaskNo3" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="57dp"
        android:text="Add Reminder"
        android:layout_marginLeft="57dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addTaskDate"
        android:layout_toEndOf="@+id/addTaskDate"
        android:onClick="datePicked"
        android:text="Set Date" />

    <Button
        android:id="@+id/buttonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addTaskTime"
        android:layout_toEndOf="@+id/addTaskDate"
        android:onClick="timeSet"
        android:text="Set Time" />
</RelativeLayout>